[gd_scene load_steps=5 format=3 uid="uid://capaoweo7kq10"]

[ext_resource type="Script" path="res://Scripts/scout.gd" id="1_23cox"]
[ext_resource type="Texture2D" uid="uid://dwaudpobvohy5" path="res://graphics/enemies/scout.png" id="1_selu8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_40h72"]
radius = 52.8867

[sub_resource type="CircleShape2D" id="CircleShape2D_j1gqw"]
radius = 607.161

[node name="Scout" type="CharacterBody2D" groups=["Scouts"]]
script = ExtResource("1_23cox")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(36, 27)
rotation = 1.5708
texture = ExtResource("1_selu8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_40h72")

[node name="AttackArea" type="Area2D" parent="." groups=["Entity"]]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_j1gqw")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(107, -27)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(115, 15)

[node name="LaserCoolDown" type="Timer" parent="."]

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="LaserCoolDown" to="." method="_on_laser_cool_down_timeout"]
